styles.css
body {
    margin: 100px auto;
}
#container {
    max-width: 400px;
    margin: auto;
    border: 1px solid black;
    border-radius: 15px;
    background-color: rgb(112, 111, 111);
}
#display {
    border: 1px;
    border-radius: 5px;
    text-align: right;
    padding: 20px;
    margin: 10px;
    font-family:'Courier New', Courier, monospace;
    background-color: rgb(255, 255, 255);
}
.last{
    font-size: 22px;
}
.current {
    font-size: 32px;
}
#calculator-buttons {
    border: 1px;
    border-radius: 5px;
    background-color: rgb(184, 184, 184);
    margin: 10px;
    padding: 10px;
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
}
button {
    border: 1px solid;
    border-radius: 5px;
    flex-grow: 1;
    width: 82px;
    padding: 20px;
    font-size: 18px;
    background-color: rgb(201, 250, 250);
}
#clear {
    background-color: rgba(235, 111, 111, 0.7);
}
#backspace {
    background-color: rgba(128, 255, 212, 0.7);
}
#add, #subtract, #multiply, #divide {
    background-color: rgba(178, 178, 250, 0.8);
}

